@@ -149,6 +149,13 @@ namespace libtorrent
 
 		void failed(int retry_interval = 0);
 
+		bool will_announce(ptime now) const
+		{
+			return now <= next_announce
+				&& (fails < fail_limit || fail_limit == 0)
+				&& !updating;
+		}
+
 		bool can_announce(ptime now) const
 		{
 			return now >= next_announce
